@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST nvidiabl-0.67-source-only.dkms.tar.gz 33340 RMD160 3b194c88c16128f78642d2a933540bb74f7d23cf SHA1 546d6c479edde920f9db12b71227c84c9e49c484 SHA256 f74668b1ac6e079d43f32d0e5278914f4ba72a462d60a9cc379b7d938cd3e8e9
 DIST nvidiabl-0.69-source-only.dkms.tar.gz 11029 RMD160 8de2dff28b4326316b704f4397ac9013687a8c25 SHA1 8f6c1cbacb4cc54cdab0346fbee4132b55993482 SHA256 e1f29bb9b398afe9004ef8745a82ce985a25aff2d43e0582c6282d2055fc2347
-EBUILD nvidiabl-0.67.ebuild 744 RMD160 c101980db735f0a290ba26775e1eaf80198edd7e SHA1 5d77021397858c125e2f5f58747414d50c1ef22f SHA256 40d06c65e87ecbe975a8afea47287a5cea7f184d938114711d45dbefbd33150b
 EBUILD nvidiabl-0.69.ebuild 744 RMD160 42a4514d38f1487f47c69ce358c975bd2b9c19de SHA1 822b3bd0b723f57fe806b971c4b5c8d8ba7fd96c SHA256 25880da60caf2f4b230fcff710e407c8ad3ed1c2366966f5c76c022218482957
-MISC ChangeLog 579 RMD160 1c97723bffe2c0630413b53ad3cb682d6b33a6f0 SHA1 ca85cb89cdfdb0f6d0c18f7e89e0ead7aa634591 SHA256 c575392989cded0af11de49b2afdcd9ca5d8a63c1a417139bf4180e1fc8c05db
+MISC ChangeLog 668 RMD160 db426fa701143735e79e822c81ccaf7e193626dc SHA1 eeabb02603ddd03c3ef3b75e514df4a882e3817b SHA256 44d9b4409882b0fcd71b31f230fd96368a4ac824023d088b9ff9f507542423d6
 MISC metadata.xml 257 RMD160 f829d1fd5c7ca4e9d680bd6a67ba7647e76e5850 SHA1 924504f4034f31fe01bc6cb5619456d4e33093c0 SHA256 46b055aefb12327935fd54c8ea02edb10100d8f860d2ca581ded422b258b5f97
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2nAfAACgkQmWq1bYTyC0M5sAD/Tw4tOnR+G/I4SMPdwG9MWIxI
-ijYGSxjQBNblSfCsB0YA/3pSi577YPZx5Is3a0guN9EiPpZUNSuTi39FknXDZUXa
-=toeU
+iF4EAREIAAYFAk28LLsACgkQmWq1bYTyC0NN/wEApuL8OrvJk2K3QFTFH7KRGAQv
+auxI7UqHR71lfzqGcbkA/2wUKsPi2/atAzQwnqDKXcw3hUt1wBRp74b1STTw1gmf
+=vZ2H
 -----END PGP SIGNATURE-----
