@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/nvidiabl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/nvidiabl/ChangeLog,v 1.3 2011/04/14 14:17:15 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/nvidiabl/ChangeLog,v 1.4 2011/04/30 15:37:40 angelos Exp $
+
+  30 Apr 2011; Christoph Mende <angelos@gentoo.org> -nvidiabl-0.67.ebuild:
+  Remove old
 
 *nvidiabl-0.69 (14 Apr 2011)
 
